# lydia-cli

./: .gitignore  CLAUDE.md  README.md  ROADMAP.md  pyproject.toml
.github/workflows/: test.yml
docs/superpowers/plans/: 2026-07-17-voice-mode.md
docs/superpowers/specs/: 2026-07-17-automations-design.md
server/: README.md  pyproject.toml
server/lydia_server/: main.py
server/lydia_server/api/: __init__.py  v1.py
server/lydia_server/auth/: __init__.py  bearer.py
server/lydia_server/config/: __init__.py  settings.py
server/lydia_server/models/: chat.py
server/lydia_server/services/: __init__.py  ollama_provider.py
server/tests/: conftest.py  test_v1.py
src/lydia/: __init__.py
src/lydia/agent/: __init__.py  facts.py  loop.py  memory.py  prompts.py  tools.py
src/lydia/cli/: chat.py  (+4 more)
src/tessa/: __init__.py
tests/: test_agent_loop.py  test_agent_tools.py  test_agent_tools_assistant.py  test_automations_runner.py  test_cli_automations.py  test_cli_briefing.py  test_cli_chat_mode.py  test_cli_commands.py  test_cli_memory.py  test_client.py  test_config.py  test_connectors_canvas.py  test_connectors_email_gmail.py  test_connectors_email_outlook.py  test_connectors_weather.py  test_database_sqlite.py  test_factory.py  test_facts.py  test_filesystem_tools.py  test_git_tools.py  test_indexer.py  test_models.py  test_ntfy.py  test_paths.py  test_prompts.py  test_protocol.py  test_remote_client.py  test_retriever.py  test_scanner.py  test_scheduler.py  test_terminal_tool.py  test_ui_confirm.py  test_ui_logo.py  test_voice_assistant.py  test_voice_wake.py
(+44 files in other folders)
