[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "lydia-server"
version = "0.1.0"
description = "Lydia Server — a FastAPI inference proxy so a lightweight lydia CLI client can run against a remote Ollama over HTTPS."
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [{ name = "Levi Mackay" }]
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.32",
    "httpx>=0.27",
]
# Also requires the `lydia` package (../src) in the same environment —
# from the repo root: pip install -e . && pip install -e server/

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
]

[project.scripts]
lydia-server = "lydia_server.main:run"

[tool.hatch.build.targets.wheel]
packages = ["lydia_server"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"
